dev/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app 
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app1 
        image: milokih351/app_p3:v1
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
  - name: app1-port 
    protocol: TCP
    port: 80
    targetPort: 80
