dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingress 
spec:
  entryPoints:
    - web 
  routes:
    - match: Host(`app.com`)
      kind: Rule
      services:
        - name: app
          port: 80
