dev/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingress 
spec:
  entryPoints:
    - web 
  routes:
    - match: PathPrefix(`/`) 
      kind: Rule
      services:
        - name: app
    - match: PathPrefix(`/`) 
      kind: Rule
      services:
        - name: argocd-server 
          port: 80
